--- a/index.html
+++ b/index.html
@@ -6,11 +6,283 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear</title>
+    <!-- fonts style -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/66cbe8d781.js" crossorigin="anonymous"></script>
     <!-- stylesheet -->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- header start -->
+    <header>
+
+    </header>
+    <!-- header end -->
+    <main>
+        <h2 class="half-width">Influencer products</h2>
+        <section class="container">
+            <div class="half-width">
+                <h1>Start your Journey as<br>Influencer</h1>
+                <p>You start the journey with the goal of building a trusted and reliable e-commerce business
+                    platform
+                </p>
+                <a class="link-button" href="https://web.programming-hero.com/">Explore Now <i
+                        class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="half-width">
+                <img src="main-camera.png" alt="">
+            </div>
+        </section>
+        <hr>
+        <!-- Popular Collection -->
+        <section>
+            <h1 class="section-title">Popular Collection</h1>
+            <div class="container-2">
+                <article class="product-deatil">
+                    <div>
+                        <div>
+                            <img src="images/tripod.png" alt="">
+                        </div>
+                        <div>
+                            <h1>Flex Tripod</h1>
+                            <h2>$50.48</h2>
+                            <div class="product-info">
+                                <div>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star empty"></i> <span>4.5</span>
+                                    <p>Wordwide shifting<br>
+                                        available<br> Buyers protection possible!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="product-deatil">
+                    <div>
+                        <div>
+                            <img src="images/single-light.png" alt="">
+                        </div>
+                        <div>
+                            <h1>Green Screen</h1>
+                            <h2>$25.8</h2>
+                            <div class="product-info">
+                                <div>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star empty"></i> <span>4.5</span>
+                                    <p>Wordwide shifting<br>
+                                        available<br> Buyers protection possible!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="product-deatil">
+                    <div>
+                        <div>
+                            <img src="images/setup.png" alt="">
+                        </div>
+                        <div>
+                            <h1>Photoshoot set</h1>
+                            <h2>$832.30</h2>
+                            <div class="product-info">
+                                <div>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star empty"></i> <span>4.5</span>
+                                    <p>Wordwide shifting<br>
+                                        available<br> Buyers protection possible!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="product-deatil">
+                    <div>
+                        <div>
+                            <img src="images/mic.png" alt="">
+                        </div>
+                        <div>
+                            <h1>Microphone</h1>
+                            <h2>$125.20</h2>
+                            <div class="product-info">
+                                <div>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star empty"></i> <span>4.5</span>
+                                    <p>Wordwide shifting<br>
+                                        available<br> Buyers protection possible!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="product-deatil">
+                    <div>
+                        <div>
+                            <img src="images/airpod.png" alt="">
+                        </div>
+                        <div>
+                            <h1>Airbuds</h1>
+                            <h2>$99.48</h2>
+                            <div class="product-info">
+                                <div>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star empty"></i> <span>4.5</span>
+                                    <p>Wordwide shifting<br>
+                                        available<br> Buyers protection possible!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="product-deatil">
+                    <div>
+                        <div>
+                            <img src="images/lights.png" alt="">
+                        </div>
+                        <div>
+                            <h1>Light setup</h1>
+                            <h2>$1800.50</h2>
+                            <div class="product-info">
+                                <div>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star empty"></i> <span>4.5</span>
+                                    <p>Wordwide shifting<br>
+                                        available<br> Buyers protection possible!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="product-deatil">
+                    <div>
+                        <div>
+                            <img src="images/action.png" alt="">
+                        </div>
+                        <div>
+                            <h1>Action Camera</h1>
+                            <h2>$390.48</h2>
+                            <div class="product-info">
+                                <div>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star empty"></i> <span>4.5</span>
+                                    <p>Wordwide shifting<br>
+                                        available<br> Buyers protection possible!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="product-deatil">
+                    <div>
+                        <div>
+                            <img src="images/drone.png" alt="">
+                        </div>
+                        <div>
+                            <h1>Drone</h1>
+                            <h2>$990.30</h2>
+                            <div class="product-info">
+                                <div>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star empty"></i> <span>4.5</span>
+                                    <p>Wordwide shifting<br>
+                                        available<br> Buyers protection possible!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="product-deatil">
+                    <div>
+                        <div>
+                            <img src="images/camera.png" alt="">
+                        </div>
+                        <div>
+                            <h1>Vlogging Camera</h1>
+                            <h2>$1980.15</h2>
+                            <div class="product-info">
+                                <div>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star empty"></i> <span>4.5</span>
+                                    <p>Wordwide shifting<br>
+                                        available<br> Buyers protection possible!</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+            </div>
+        </section>
+        <div class="see-more">
+            <a id="more-info" href="https://web.programming-hero.com/">See More<i class="fas fa-arrow-right"></i></a>
+        </div>
+        <!-- Featured products -->
+        <section class="container">
+            <div class="half-width">
+                <img src="images/gear.png" alt="">
+            </div>
+            <div class="half-width">
+                <h1>Featured products at one place</h1>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                    do amet sint. Velit officia consequat duis enim velit mollit.
+                    Exercitation veniam consequat sunt nostrud amet.
+                </p>
+                <a class="link-button" href="https://web.programming-hero.com/">Explore Now <i
+                        class="fas fa-arrow-right"></i></a>
+            </div>
+        </section>
+        <!-- footer section -->
+        <section class="section-title" id="footer-color">
+            <h1>Influencer products</h1>
+            <footer>Copyright <span><i class="far fa-copyright"></i></span> 2020 influencer products<footer>
+                    <footer>All rights reserved</footer>
+                    <div id="icon">
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-youtube"></i>
+                        <i class="fas fa-globe-africa"></i>
+                    </div>
+        </section>
+    </main>
 </body>
 
 </html>
