--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a class="link-button" href="https://web.programming-hero.com/">Explore Now <i
                         class="fas fa-arrow-right"></i></a>
             </div>
-            <div class="half-width">
+            <div class="half-width" id="photo">
                 <img src="main-camera.png" alt="">
             </div>
         </section>
@@ -181,7 +181,7 @@
                     </div>
                 </article>
                 <article class="product-deatil">
-                    <div>
+                    <div class="product-info">
                         <div>
                             <img src="images/action.png" alt="">
                         </div>
@@ -259,7 +259,7 @@
             <div class="half-width">
                 <img src="images/gear.png" alt="">
             </div>
-            <div class="half-width">
+            <div class="half-width" id="future-products">
                 <h1>Featured products at one place</h1>
                 <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor
                     do amet sint. Velit officia consequat duis enim velit mollit.
@@ -272,7 +272,7 @@
         <!-- footer section -->
         <section class="section-title" id="footer-color">
             <h1>Influencer products</h1>
-            <footer>Copyright <span><i class="far fa-copyright"></i></span> 2020 influencer products<footer>
+            <footer>Copyright <span><i class="far fa-copyright"></i></span> 2022 influencer products<footer>
                     <footer>All rights reserved</footer>
                     <div id="icon">
                         <i class="fab fa-instagram"></i>
